This fileUrl works on windows. previous one did not work. The Drive Letter was removed from the file path
git-svn-id: https://scm.mmbase.org/mmbase/trunk@35775 91430c5f-d668-0410-9e7d-dd663366dcfd